@@ -1,3 +1,7 @@
+Thu Jan 10 22:19:26 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/odbc/unittests/cancel.c src/odbc/unittests/hidden.c:
+	- memory fixes
+
 Thu Jan 10 17:04:15 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/odbc/unittests/.cvsignore src/odbc/unittests/Makefile.am:
 	* src/odbc/unittests/cancel.c(added):
@@ -25,4 +29,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog  truncated because of release
 	* ChangeLog-0.82 added because of release
 	
-$Id: ChangeLog,v 1.2461 2008/01/10 16:05:59 freddy77 Exp $
+$Id: ChangeLog,v 1.2462 2008/01/10 21:19:47 freddy77 Exp $
